# Fraud-Detection-with-ML

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.airflow  Fraud-Detection-with-ML.Rproj  Makefile  README.md  docker-compose.yaml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
dags/: pipeline_dag.py
docker/airflow/: requirements.txt
models/: label_encoders.pkl  scaler.pkl
notebooks/: 01_EDA_in_R.Rmd  01a_EDA_summary_in_Python.ipynb  02_Preprocessing_Modeling_in_Python.ipynb  03_Deployment_in_Python.ipynb  request_example.json
reports/: model_metrics.csv
src/: data_preprocessing.py  main.py  model_training.py  predictor.py  visual_config.py  visualization_utils.py
tests/: test_model.py  test_preprocessing.py
