[tool.poetry]
name = "fraud-detection-with-ml"
version = "0.1.0"
description = "EDA and modeling pipeline for IEEE-CIS fraud detection dataset."
authors = ["Alejandro Matías Astorga <alejandromatiasastorga@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.3"
numpy = "^2.2.5"
matplotlib = "^3.10.3"
seaborn = "^0.13.2"
scikit-learn = "^1.6.1"
xgboost = "^3.0.0"
lightgbm = "^4.6.0"
optuna = "^4.3.0"
mlflow = "^2.22.0"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.1.1"
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
