[tool.poetry]
name = "fraud-detection-with-ml"
version = "0.1.0"
description = "EDA and modeling pipeline for IEEE-CIS fraud detection dataset."
authors = ["Alejandro Matías Astorga <alejandromatiasastorga@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [
  { include = "src" }
]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.3"
numpy = "^2.2.5"
matplotlib = "^3.10.3"
seaborn = "^0.13.2"
scikit-learn = "^1.6.1"
xgboost = "^3.0.0"
lightgbm = "^4.6.0"
optuna = "^4.3.0"
mlflow = "^3.1.0"
catboost = "^1.2.8"
joblib = "^1.5.0"
fastapi = "^0.115.12"
uvicorn = "^0.34.2"



[tool.poetry.group.dev.dependencies]
jupyter = "^1.1.1"
ipykernel = "^6.29.5"
pytest = "^8.3.5"
pre-commit = "^4.2.0"
requests = "^2.32.4"
types-requests = "^2.32.4.20250611"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
